<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/home_page"/>
    <item
        android:id="@+id/bottom_menu_evaluate"
        android:icon="@drawable/ic_fiber_new_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/evaluate" />

    <item
        android:id="@+id/bottom_menu_vedio"
        android:icon="@drawable/ic_video_library_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/vedio"/>

    <item
        android:id="@+id/bottom_menu_center"
        android:icon="@drawable/ic_person_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/personal"/>

</menu>