<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:clickable="true"
    android:background="@color/itembg"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_margin="5dp"
                android:id="@+id/arcTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titledemo"
                android:textColor="@color/itemTextTitle"
                android:textSize="@dimen/default_medium_text_size"/>

            <ImageView
                android:id="@+id/arcImg"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/longimgdemo"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/arcDesc"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2"
                android:textColor="@color/itemTextDesc"
                android:textSize="@dimen/default_small_text_size"
                android:text="@string/longstringdemo"/>

            <RelativeLayout
                android:paddingTop="0dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.inwaishe.app.widget.circleImage.CircleImageView
                    android:id="@+id/arcAuthorAvter"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:scaleType="fitXY"
                    android:background="@drawable/corner_bg"/>

                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/arcAuthorAvter"
                    android:id="@+id/arcAuthor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publisherdemo"
                    android:textSize="@dimen/default_small_text_size"
                    android:layout_centerVertical="true"
                    android:textColor="@color/holo_blue_dark"/>

                <TextView
                    android:id="@+id/arcDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publisherdatedemo"
                    android:textSize="@dimen/default_small_text_size"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/itemTextDate"/>

            </RelativeLayout>
            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/bgcolor"/>
        </LinearLayout>
    </RelativeLayout>